# MARiA

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.env.example  docker-compose.dev.yaml  docker-compose.yaml  log_config.yaml  pyproject.toml  test_auth.db  traefik.yml
alembic/: env.py
alembic/versions/: 1084407825df_create_accounts_table.py  2025_07_01_2040-b483e2c51dad_create_user.py  2025_07_02_2040-24a803bbcf33_create_thread.py  2025_07_03_2040-4ecd9588753a_create_table_notion_authorization.py  2025_07_04_2040-47220b215028_create_notion_databases_table.py  2025_07_05_2040-6e28d35dcb27_add_password_to_users.py  2025_07_06_2040-e879fb9293c8_create_revoked_tokens.py  2025_07_07_2040-cf57fd586e8d_create_table_pluggy_item.py  2025_07_08_2040-1084407825df_create_accounts_table.py  2025_08_04_2040-9510e51552a6_create_transactions_table.py  2025_08_05_0902-d9d012dfa75f_create_bills_table.py  2025_08_05_1605-1b2b3c4d5e67_create_investments_and_loans_table.py  2025_08_07_1749-f8c70eedb0b3_set_pluggy_collumns_as_nullable.py  2025_08_07_1815-f33ebbff990b_set_pluggy_accounts_columns_as_nullable.py  2025_08_13_2238-5241c0f65ee9_create_management_planning_table.py  2025_08_13_2238-99b0a837d81a_create_management_period_table.py  2025_08_13_2238-a6e636403ca9_create_categories_table.py  2025_08_13_2238-b5c4fc971887_create_macro_categories_table.py  2025_08_13_2238-b6ea00529119_create_transactions_table_v2.py  2025_08_13_2238-d19b4a200b17_create_accounts_table_v2.py  2025_09_17_2136-b99a84c24571_add_account_name.py  2025_10_07_2152-90f0b1625fc3_create_recover_password_table.py  2025_10_10_1926-b2cbf427a97b_create_soft_delete_for_accounts.py  2025_12_14_1852-9239ff1f9e63_add_column_enable_to_users_table.py  2026_03_25_1337-9b5a90ce0eca_create_user_long_term_memory.py  24a803bbcf33_create_thread.py  4ecd9588753a_create_table_notion_authorization.py  6e28d35dcb27_add_password_to_users.py  cf57fd586e8d_create_table_pluggy_item.py
jupyter_test/: agents.ipynb  multi_agent.ipynb  notion_api_test.ipynb  read_databases.ipynb
src/MARiA/: __init__.py  __main__.py  agent_base.py  maria_interaction.py  prompts.py  search_notion_agent.py  single_agent.py
src/MARiA/agents/: __init__.py  base_agents.py  prompts.py  search_notion_agent.py
src/MARiA/base_tools/: __init__.py
src/MARiA/graph/: __init__.py  maria_graph.py  search_graph.py  state.py  transactions_agent_graph.py
src/app/: custom_state.py  injections.py  lifespan.py  main.py
src/app/db/: session.py
src/application/: __init__.py  account_application.py  auth_application.py  category_application.py  management_period_application.py  management_planning_application.py  message_application.py  notion_authorization_application.py  open_finance_application.py  transaction_application.py  user_application.py
src/config/: settings.py
src/controllers/: __init__.py  account_controller.py  auth_controller.py  category_controller.py  health_check.py  management_period_controller.py  management_planning_controller.py  new_message_controller.py  notion_authorization_controller.py  open_finance_connection_controller.py  test_auth_controller.py  transaction_controller.py  user_controller.py
src/database/: __init__.py  base_database.py  seed.py
src/domain/: __init__.py  account_domain.py  auth_domain.py  category_domain.py  macro_category_domain.py  management_period_domain.py  management_planning_domain.py  notion_authorization_domain.py  notion_tool_domain.py  notion_user_data_domain.py  pluggy_item_domain.py  recover_password_domain.py  transaction_domain.py  user_domain.py  user_long_term_memory_domain.py
src/dto/: __init__.py  paginated_data_list_dto.py  transaction_list_dto.py  user_answer_data_dto.py
src/messaging/: message_service.py  message_service_dev.py
src/notion_based_ai/: __main__.py
src/repository/: __init__.py  account_repository.py  auth_repository.py  base_repository.py  category_repository.py  macro_category_repository.py  management_period_repository.py  management_planning_repository.py  notion_authorization_repository.py  notion_database_repository.py  notion_datasource_repository.py  pluggy_item_repository.py  recover_password_repository.py  transaction_repository.py  user_long_term_memory_repository.py  user_repository.py
src/secrets/: __init__.py
src/secrets_functions/: __init__.py  secret_utils.py
src/whatsapp/: __init__.py  message_repository.py  message_service.py
tests/: test_auth.py
web/: .last_build_id  default.conf  dockerfile  flutter_bootstrap.js  flutter_service_worker.js  main.dart.js
web/web/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  manifest.json  version.json
(+154 files in other folders)
