[project]
name = "notion-based-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "LeonardoLeiteMeira",email = "leonardo.leitemeira10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "notion-client (>=2.3.0,<3.0.0)",
    "websocket-client (>=1.8.0,<2.0.0)",
    "python-socketio (>=5.12.1,<6.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[tool.poetry]
packages = [{include = "", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
