[project]
name = "notion-based-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "LeonardoLeiteMeira",email = "leonardo.leitemeira10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "notion-client (>=2.3.0,<3.0.0)",
    "websocket-client (>=1.8.0,<2.0.0)",
    "python-socketio (>=5.12.1,<6.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "langgraph (>=0.3.25,<0.4.0)",
    "langsmith (>=0.3.24,<0.4.0)",
    "langchain-anthropic (>=0.3.10,<0.4.0)",
    "psycopg-pool (>=3.2.6,<4.0.0)",
    "langgraph-checkpoint-postgres (>=2.0.20,<3.0.0)",
    "psycopg[binary] (>=3.2.6,<4.0.0)",
    "greenlet (>=3.2.2,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sentry-sdk[fastapi] (>=2.30.0,<3.0.0)",
    "cryptography (==41.0.7)",
]

[tool.poetry]
packages = [
    {include = "app", from = "src"},
    {include = "controllers", from = "src"},
    {include = "database", from = "src"},
    {include = "MARiA", from = "src"},
    {include = "messaging", from = "src"},
    {include = "application", from = "src"},
    {include = "repository", from = "src"},
    {include = "domain", from = "src"},
    {include = "config", from = "src"},
    {include = "secrets_functions", from = "src"},
    {include = "external", from = "src"},
    {include = "dto", from = "src"},
]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
langgraph-checkpoint-sqlite = "^2.0.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
