[project]
name = "maria"
version = "0.1.0"
description = ""
authors = [
    {name = "LeonardoLeiteMeira",email = "leonardo.leitemeira10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "notion-client (>=2.3.0,<3.0.0)",
    "websocket-client (>=1.8.0,<2.0.0)",
    "python-socketio (>=5.12.1,<6.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "langgraph (>=0.3.25,<0.4.0)",
    "langsmith (>=0.3.24,<0.4.0)",
    "langchain-anthropic (>=0.3.10,<0.4.0)",
    "psycopg-pool (>=3.2.6,<4.0.0)",
    "langgraph-checkpoint-postgres (>=2.0.20,<3.0.0)",
    "psycopg[binary] (>=3.2.6,<4.0.0)",
    "greenlet (>=3.2.2,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sentry-sdk[fastapi] (>=2.30.0,<3.0.0)",
    "cryptography (==41.0.7)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
]

[tool.poetry]
packages = [
    {include = "app", from = "src"},
    {include = "controllers", from = "src"},
    {include = "database", from = "src"},
    {include = "MARiA", from = "src"},
    {include = "application", from = "src"},
    {include = "repository", from = "src"},
    {include = "domain", from = "src"},
    {include = "config", from = "src"},
    {include = "secrets_functions", from = "src"},
    {include = "external", from = "src"},
    {include = "dto", from = "src"},
]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
langgraph-checkpoint-sqlite = "^2.0.10"
pytest = "^8.4.1"
ruff = "^0.14.11"


[tool.mypy]
warn_return_any = true
ignore_missing_imports = false
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 88
exclude = [".git", "build", "dist"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
